--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.36.0",
+    "@tanstack/vue-query-devtools": "^5.40.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/qs": "^6.9.15",
+    "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
+    "qs": "^6.12.1",
+    "sass": "^1.77.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.6.3"
+    "vuetify": "^3.6.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
